--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -572,17 +572,17 @@
                                         </ul>
                                     </li>
                                     <li><a class="child 2" href="#install3"><span class="numbers">3.2.</span> Building a basic bot</a></li>
-                                    <li><a class="child 2" href="#ocr3"><span class="numbers">3.3.</span> Menu Options</a>
+                                    <li><a class="child 2" href="Menu"><span class="numbers">3.3.</span> Menu Options</a>
                                         <ul>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.1</span> <span style="margin-left:5px;">New</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.2</span> <span style="margin-left:5px;">Open</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.3</span> <span style="margin-left:5px;">Save</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.4</span> <span style="margin-left:5px;">Record</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.5</span> <span style="margin-left:5px;">Clear</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.6</span> <span style="margin-left:5px;">Publish</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.7</span> <span style="margin-left:5px;">Settings</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.8</span> <span style="margin-left:5px;">Stop</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.3.9</span> <span style="margin-left:5px;">Play</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="New"><span class="numbers">3.3.1</span> <span style="margin-left:5px;">New</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Open"><span class="numbers">3.3.2</span> <span style="margin-left:5px;">Open</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Save"><span class="numbers">3.3.3</span> <span style="margin-left:5px;">Save</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Record"><span class="numbers">3.3.4</span> <span style="margin-left:5px;">Record</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Clear"><span class="numbers">3.3.5</span> <span style="margin-left:5px;">Clear</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Publish"><span class="numbers">3.3.6</span> <span style="margin-left:5px;">Publish</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Settings"><span class="numbers">3.3.7</span> <span style="margin-left:5px;">Settings</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Stop"><span class="numbers">3.3.8</span> <span style="margin-left:5px;">Stop</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Play"><span class="numbers">3.3.9</span> <span style="margin-left:5px;">Play</span></a></li>
                                         </ul>
                                     </li>
                                       <li><a class="child 2" href="#action"><span class="numbers">3.4.</span> Action Library</a>
@@ -710,9 +710,11 @@
 
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.6</span> <span style="margin-left:5px;">Mail Integration</span></a></li>
 
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.7</span> <span style="margin-left:5px;">Database Actions</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.7.1</span> <span style="margin-left:5px;">Connect</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.7.2</span> <span style="margin-left:5px;">Execute Query</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.7</span> <span style="margin-left:25px;">Database Actions</span></a>
+                                          <ul>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.7.1</span> <span style="margin-left:25px;">Connect</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.7.2</span> <span style="margin-left:25px;">Execute Query</span></a></li>
+                                          </ul></li>
 
                                         </ul></li>
                                         </ul>
@@ -745,31 +747,6 @@
                                    <li><a class="child 5" href=><span class="numbers">7.3</span>On-prem Model</a></li>
                                </ul>
                             </li>
-                             <!-- <li>
-                                <a href="" class="heading"><span class="numbers">8.</span> Enterprise Manager Console</a>
-                                <ul class="collapse list-unstyled collapse-7">
-                                    <li><a class="child 7" href="#processManagement"><span class="numbers">8.1.</span> Process Management</a></li>
-                                    <li><a class="child 7" href="#workerManagement"><span class="numbers">8.2.</span>Worker Management</a></li>
-                                    <li><a class="child 7" href="#workerList"><span class="numbers">8.3.</span>Worker List </a></li>
-                                    <li><a class="child 7" href="#schedules"><span class="numbers">8.4.</span>Schedules</a></li>
-                                    <li><a class="child 7" href="#accountManagement"><span class="numbers">8.5.</span> Account Management</a></li>
-                                </ul>
-                            </li>
-                             <li>
-                                <a href="" class="heading"><span class="numbers">9.</span> Developer Guide  </a>
-                                <ul class="collapse list-unstyled collapse-8">
-                                    <li><a class="child 8" href="#studio"><span class="numbers">9.1.</span> Studio Guide</a></li>
-                                    <li><a class="child 8" href="#play"><span class="numbers">9.2.</span>Play</a></li>
-                                    <li><a class="child 8" href="#actionLibrary"><span class="numbers">9.3.</span>Action Library Panel</a></li>
-                                    <li><a class="child 8" href="#devPanel"><span class="numbers">9.4.</span>Developer Panel</a></li>
-                                    <li><a class="child 8" href="#propPanel"><span class="numbers">9.5.</span>Properties Panel</a></li>
-                                    <li><a class="child 8" href="#actionGuide"><span class="numbers">9.6.</span>Actions Guide</a></li>
-                                    <li><a class="child 8" href="#basicBot"><span class="numbers">9.7.</span>Build A Basic Bot</a></li>
-                                </ul>
-                            </li>
-                             <li>
-                                <a href="#securityArchi" class="heading"><span class="numbers">10.</span> Security Architecture </a>
-                            </li> -->
                         </ul>
                       </div>
                     </div>
@@ -955,8 +932,8 @@
                               <p>To download Techforce.ai RPA studio,  click on the below URL. <br> The file size would be around 330 MB.</p>
                               <a class="blueLink" href="https://github.com/digitamizers/techforce-ide/releases/download/v1.0.0-alpha.39 /techforceide-install-v1.0.0-alpha.39.exe">https://github.com/digitamizers/techforce-ide/releases/download/v1.0.0-alpha.39 /techforceide-install-v1.0.0-alpha.39.exe</a> -->
                           </div>
-                           <div id="install3"  class="page-section">
-                               <h4 class="green">3.2. Installing RPA Studio</h4>
+                           <div id="Menu"  class="page-section">
+                               <h4 class="green">3.3 Menu Options</h4>
                                <p>RPA studio requires <strong>945 MB</strong> hard disk space to install.</p>
                                <ol>
                                  <li><span class="numbers">1.</span> After downloading the RPA studio, move the downloaded studio.exe file to the desired folder where it needs to be installed.</li>
