changes in DDoc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -560,9 +560,9 @@
                                 </ul>
                             </li>
                            <li class="subMenu">
-                                <a href=""  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
+                                <a href="Techforce"  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
                                 <ul class="collapse list-unstyled collapse-2">
-                                    <li><a class="child 2" href="#download3"><span class="numbers">3.1.</span> Installation</a>
+                                    <li><a class="child 2" href="#Installation"><span class="numbers">3.1.</span> Installation</a>
                                         <ul>
                                            <li style="margin-left:20px;"><a class="child 2" href="#Software Requirements"><span class="numbers">3.1.1</span> <span style="margin-left:5px;">Software Requirements</span></a></li>
                                            <li style="margin-left:20px;"><a class="child 2" href="Hardware Requirements"><span class="numbers">3.1.2</span> <span style="margin-left:5px;">Hardware Requirements</span></a></li>
@@ -572,7 +572,7 @@
                                         </ul>
                                     </li>
                                     <li><a class="child 2" href="#install3"><span class="numbers">3.2.</span> Building a basic bot</a></li>
-                                    <li><a class="child 2" href="Menu Options"><span class="numbers">3.3</span> Menu Options</a>
+                                    <li><a class="child 2" href="#Menu Options"><span class="numbers">3.3</span> Menu Options</a>
                                         <ul>
                                           <li style="margin-left:20px;"><a class="child 2" href="New"><span class="numbers">3.3.1</span> <span style="margin-left:5px;">New</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#Open"><span class="numbers">3.3.2</span> <span style="margin-left:5px;">Open</span></a></li>
