changes in docu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -572,7 +572,7 @@
                                         </ul>
                                     </li>
                                     <li><a class="child 2" href="#install3"><span class="numbers">3.2.</span> Building a basic bot</a></li>
-                                    <li><a class="child 2" href="#Menu Options"><span class="numbers">3.3</span> Menu Options</a>
+                                    <li><a class="child 2" href="#Menu"><span class="numbers">3.3</span> Menu Options</a>
                                         <ul>
                                           <li style="margin-left:20px;"><a class="child 2" href="New"><span class="numbers">3.3.1</span> <span style="margin-left:5px;">New</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#Open"><span class="numbers">3.3.2</span> <span style="margin-left:5px;">Open</span></a></li>
@@ -932,7 +932,7 @@
                               <p>To download Techforce.ai RPA studio,  click on the below URL. <br> The file size would be around 330 MB.</p>
                               <a class="blueLink" href="https://github.com/digitamizers/techforce-ide/releases/download/v1.0.0-alpha.39 /techforceide-install-v1.0.0-alpha.39.exe">https://github.com/digitamizers/techforce-ide/releases/download/v1.0.0-alpha.39 /techforceide-install-v1.0.0-alpha.39.exe</a> -->
                           </div>
-                           <div id="Menu Options"  class="page-section">
+                           <div id="Menu"  class="page-section">
                                <h4 class="green">3.3 Menu Options</h4>
                                <p>RPA studio requires <strong>945 MB</strong> hard disk space to install.</p>
                                <ol>
