--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -934,38 +934,20 @@
                           </div>
                            <div id="Menu"  class="page-section">
                                <h4 class="green">3.3 Menu Options</h4>
-                               <p>RPA studio requires <strong>945 MB</strong> hard disk space to install.</p>
+                               <p>Techforce RPA Studio Menu bar contains File Tab and Record Tab. The menu toolbar contains the following New, Open, Save, Record, Clear, Publish, Settings, Stop and Play functionalities. Menu bars are very common and easy to find. They help in the efficient use of space.</p>
+                               <img src="{{ '/assets/images/doc-img2.png' | relative_url }}" alt="image">
+                               <li><span class="numbers">Figure 2: </span>  Techforce RPA Studio Menu Panel</li>
                                <ol>
-                                 <li><span class="numbers">1.</span> After downloading the RPA studio, move the downloaded studio.exe file to the desired folder where it needs to be installed.</li>
-                                 <li><span class="numbers">2.</span> Right-click on the installer and select <strong>“Run as administrator”</strong> so that RPA studio will have “Admin” privileges.<br>
-                                  The following image is an example of how to run as administrator.
-                                   <img src="{{ '/assets/images/doc-img1.png' | relative_url }}" alt="image" class="lessSpace">
-                                 </li>
-                                 <li>
-                                  <span class="numbers">3.</span> Windows will ask for permission stating “<strong>Do you want to allow the unknown publisher to install the application”</strong>. Click <strong>YES</strong>,  and the installation process will start. </li>
-                                  <li><span class="numbers">4.</span> Accept the license agreement of Techforce.ai to proceed for the further installation process.
-                                  <img src="{{ '/assets/images/doc-img2.png' | relative_url }}" alt="image">
-                                  The installation process will show the folder selection screen.
-                                  </li>
-                                  <li><span class="numbers">5.</span> Click on <strong>BROWSE</strong> and select a folder which does not contain a space in its name like shown in the image.
-                                    <img src="{{ '/assets/images/doc-img3.png' | relative_url }}" alt="image">
-                                  </li>
-                                  <li><span class="numbers">6.</span> After selecting the folder, click on <strong>“INSTALL”</strong> which will start installing RPA studio.
-                                    <img src="{{ '/assets/images/doc-img4.png' | relative_url }}" alt="image">
-                                    <blockquote>
-                                      <div>
-                                        <img src="{{ '/assets/images/idea.svg' | relative_url }}" alt="image">
-                                        TIP
-                                      </div>
-                                      <p>On the folder selection screen, make sure to select a folder, which does not contain any space in the folder name. If the selected folder contains any space in its name, then the RPA scripts built using the studio cannot be executed.</p>
-                                    </blockquote>
-                                  </li>
-                                  <li><span class="numbers">7.</span> The installation will take a bit time, and after installing the Studio, click on <strong>CLOSE</strong> button to proceed for further process.
-                                    <img src="{{ '/assets/images/doc-img5.png' | relative_url }}" alt="image">
-                                    RPA studio installer will prompt to download a dependency file. Install the dependency file.
-                                  </li>
-                                  <li class="mb-0"><span class="numbers">8.</span> Click on the <strong>“OK”</strong> button as shown in the above image, to install Techforce OCR, which is a dependency to RPA studio.
-                                  <img src="{{ '/assets/images/doc-img6.png' | relative_url }}" alt="image"></li>
+                                 <li><span class="numbers">1.</span><strong>File Tab:</strong></li>
+                                 <li>The File bar displays Actions and the options in the drop-down menu are Exit, Save and Save As.</li>
+                                 <li><stong>Exit:</strong>Exit is used to close the Techforce RPA Studio.</li>
+                                 <li><stong>Save:</strong>It is used to save an RPA task with a name. The shortcut is Ctrl+S.</li>
+                                 <li><stong>Save As:</strong>It is used to save an already saved document with a new name. The shortcut is Ctrl+Shift+S.</li>
+                                 <img src="{{ '/assets/images/doc-img2.png' | relative_url }}" alt="image">
+                                 <li><span class="numbers">Figure 3: </span>  Techforce RPA Studio File Tab</li>
+                                 <li><span class="numbers">2.</span><strong>Help Tab:</strong></li>
+                                 <li>The help tab displays the installed version of the studio. </li>
+
                                </ol>
                           </div>
                           <div id="ocr3"  class="page-section">
