--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -656,15 +656,15 @@
                                           <li style="margin-left:20px;"><a class="child 2" href="#GetCell"><span class="numbers">3.4.4.18.7</span> <span style="margin-left:35px;">Get Cell</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#WriteCell"><span class="numbers">3.4.4.18.8</span> <span style="margin-left:35px;">Write Cell</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#GetRange"><span class="numbers">3.4.4.18.9</span> <span style="margin-left:35px;">Get Range</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#WriteRange"><span class="numbers">3.4.4.18.10</span> <span style="margin-left:35px;">Write Range</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#AppendRange"><span class="numbers">3.4.4.18.11</span> <span style="margin-left:35px;">Append Range</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#DeleteRange"><span class="numbers">3.4.4.18.12</span> <span style="margin-left:35px;">Delete Range</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#GetCellColor"><span class="numbers">3.4.4.18.13</span> <span style="margin-left:35px;">Get Cell Color</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#SetRangeColor"><span class="numbers">3.4.4.18.14</span> <span style="margin-left:35px;">Set Range Color</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#GetCellFormula"><span class="numbers">3.4.4.18.15</span> <span style="margin-left:35px;">Get Cell Formula</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#FilterColumn"><span class="numbers">3.4.4.18.16</span> <span style="margin-left:35px;">Filter Column</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#Convert"><span class="numbers">3.4.4.18.17</span> <span style="margin-left:35px;">Convert to XLSX</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#Insert"><span class="numbers">3.4.4.18.18</span> <span style="margin-left:35px;">Insert Column</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#WriteRange"><span class="numbers">3.4.4.18.10</span> <span style="margin-left:40px;">Write Range</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#AppendRange"><span class="numbers">3.4.4.18.11</span> <span style="margin-left:40px;">Append Range</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#DeleteRange"><span class="numbers">3.4.4.18.12</span> <span style="margin-left:40px;">Delete Range</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#GetCellColor"><span class="numbers">3.4.4.18.13</span> <span style="margin-left:40px;">Get Cell Color</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#SetRangeColor"><span class="numbers">3.4.4.18.14</span> <span style="margin-left:40px;">Set Range Color</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#GetCellFormula"><span class="numbers">3.4.4.18.15</span> <span style="margin-left:40px;">Get Cell Formula</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#FilterColumn"><span class="numbers">3.4.4.18.16</span> <span style="margin-left:40px;">Filter Column</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Convert"><span class="numbers">3.4.4.18.17</span> <span style="margin-left:40px;">Convert to XLSX</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Insert"><span class="numbers">3.4.4.18.18</span> <span style="margin-left:40px;">Insert Column</span></a></li>
                                           </ul></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#Loops"><span class="numbers">3.4.4.19</span> <span style="margin-left:35px;">Loops (For)</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#TechforceOCR"><span class="numbers">3.4.4.20</span> <span style="margin-left:35px;">Techforce OCR</span></a></li>
@@ -684,10 +684,10 @@
                                           <li style="margin-left:20px;"><a class="child 2" href="#PutFile"><span class="numbers">3.4.4.22.3</span> <span style="margin-left:35px;">Put File</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.4</span> <span style="margin-left:35px;">Get Files</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#PutFiles"><span class="numbers">3.4.4.22.5</span> <span style="margin-left:35px;">Put Files</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.6</span> <span style="margin-left:35px;">Delete</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.7</span> <span style="margin-left:35px;">Delete Files</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.8</span> <span style="margin-left:35px;">Move Remote File</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.22.9</span> <span style="margin-left:35px;">Move Remote Files</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Delete"><span class="numbers">3.4.4.22.6</span> <span style="margin-left:35px;">Delete</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#DeleteFiles"><span class="numbers">3.4.4.22.7</span> <span style="margin-left:35px;">Delete Files</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#MoveRemoteFile"><span class="numbers">3.4.4.22.8</span> <span style="margin-left:35px;">Move Remote File</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#MoveRemoteFiles"><span class="numbers">3.4.4.22.9</span> <span style="margin-left:35px;">Move Remote Files</span></a></li>
                                           </ul></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#CSVActions"><span class="numbers">3.4.4.23</span> <span style="margin-left:35px;">CSV Actions</span></a>
                                           <ul>
