--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -748,22 +748,22 @@
                     </div>
                       <div class="doc-data col-md-8 col-sm-8">
                         <div id="About"  class="page-section">
-                              <h3><span class="numbers">1.</span> About Techforce.ai RPA</h3>
+                                <h4 class="purple">1.</span> About Techforce.ai RPA</h4>
                           </div>
 
                           <div id="Release"  class="page-section">
-                                <h3><span class="numbers">2.</span> Release Notes</h3>
+                                  <h4 class="purple">2.</span> Release Notes</h4>
                             </div>
 
                             <div id="Patches"  class="page-section">
-                                  <h3><span class="numbers">2.1</span> Patches & Updates</h3>
+                                    <h4 class="purple"><span class="numbers">2.1</span> Patches & Updates</h4>
                                   <p><span class="numbers">1.</span>	Fixed issues that prevents studio installation when the install path has spaces</p>
                                   <p><span class="numbers">2.</span>	Resolved issues with desktop automation (dll file missing issues)</p>
                                   <p><span class="numbers">3.</span>	Enhanced support to handle Popups and Frames</p>
                                   <p><span class="numbers">4.</span>	Implicit wait feature that waits for webpage elements to load before act on</p>
                             </div>
                             <div id="What’s"  class="page-section">
-                                  <h3><span class="numbers">2.2</span> What’s New</h3>
+                                    <h4 class="purple"><span class="numbers">2.2</span> What’s New</h4>
                                   <p><span class="numbers">1.</span>	Firefox and Microsoft Edge support for Web Automations</p>
                                   <p><span class="numbers">2.</span>	Light weight installation distribution</p>
                                   <p><span class="numbers">3.</span> Debug mode</p>
@@ -776,15 +776,15 @@
                             </div>
 
                          <div id="download3"  class="page-section">
-                           <h3><span class="numbers">3.</span>Techforce.ai Studio Guide</h3>
+                             <h4 class="purple"><span class="numbers">3.</span>Techforce.ai Studio Guide</h4>
                           </div>
 
                           <div id="Installation"  class="page-section">
-                            <h3><span class="numbers">3.1</span>Installation</h3>
+                              <h4 class="purple"><span class="numbers">3.1</span>Installation</h4>
                            </div>
 
                           <div id="SoftwareRequirements"  class="page-section">
-                            <h3><span class="numbers">3.1.1</span> Software Requirements</h3>
+                              <h4 class="purple"><span class="numbers">3.1.1</span> Software Requirements</h4>
                             <h4>OS Compatibility:</h4>
                             <ol>
                             <li><span class="numbers">1.</span><strong>On Premise:</strong>Windows 10 / Windows Server 2016 and above versions. </li>
@@ -821,7 +821,7 @@
                            </div>
 
                            <div id="HardwareRequirements"  class="page-section">
-                             <h3><span class="numbers">3.1.2</span> Hardware Requirements</h3>
+                               <h4 class="purple"><span class="numbers">3.1.2</span> Hardware Requirements</h4>
                              <ol>
                              <li><span class="numbers">1.</span><strong>Processor:</strong>Intel Core i5 2.6GHz </li>
                              <li><span class="numbers">2.</span><strong>RAM:</strong>8GB</li>
@@ -833,7 +833,7 @@
                            </div>
 
                            <div id="InstallationInstructions"  class="page-section">
-                             <h3><span class="numbers">3.1.3</span> Installation Instructions</h3>
+                               <h4 class="purple"><span class="numbers">3.1.3</span> Installation Instructions</h4>
                              <h4>Installing RPA Studio</h4>
                              <ol>
                              <li><span class="numbers">1.</span>After downloading the RPA studio, move the downloaded studio.exe file to the desired folder where it needs to be installed.</li>
@@ -856,7 +856,7 @@
 
                           </div>
                           <div id=" InstallingTechforceOCR"  class="page-section">
-                            <h3><span class="numbers">3.1.4</span>  Installing Techforce OCR</h3>
+                              <h4 class="purple"><span class="numbers">3.1.4</span>  Installing Techforce OCR</h4>
                             <p>Techforce OCR needs 164MB of hard disk space for installation.</p>
                             <ol>
                             <li><span class="numbers">1.</span>In the first screen of Techforce OCR installation, select preferred language, and click “OK” which will start the installation of Techforce OCR.</li>
@@ -883,7 +883,7 @@
                          </div>
 
                          <div id="Un-installInstructions"  class="page-section">
-                           <h3><span class="numbers">3.1.5</span>  Un-install Instructions</h3>
+                             <h4 class="purple"><span class="numbers">3.1.5</span>  Un-install Instructions</h4>
                            <p>To uninstall the techforce.ai studio</p>
                            <p>Go to the Control panel and click on Uninstall a program.</p>
                            <img src="{{ '/assets/images/doc-img2.png' | relative_url }}" alt="image">
