--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -552,7 +552,7 @@
                                 <a href="Release" class="heading"><span class="numbers">2.</span> Release Notes</a>
                                 <ul class="collapse list-unstyled collapse-1">
                                     <li><a class="child 1" href="#Patches"><span class="numbers">2.1</span> Patches & Updates</a></li>
-                                    <li><a class="child 1" href="#What's"><span class="numbers">2.2</span> What's New</a></li>
+                                    <li><a class="child 1" href="#What"><span class="numbers">2.2</span> What's New</a></li>
                                 </ul>
                             </li>
                            <li class="subMenu">
@@ -762,7 +762,7 @@
                                   <p><span class="numbers">3.</span>	Enhanced support to handle Popups and Frames</p>
                                   <p><span class="numbers">4.</span>	Implicit wait feature that waits for webpage elements to load before act on</p>
                             </div>
-                            <div id="What’s"  class="page-section">
+                            <div id="What"  class="page-section">
                                     <h4 class="purple"><span class="numbers">2.2</span> What’s New</h4>
                                   <p><span class="numbers">1.</span>	Firefox and Microsoft Edge support for Web Automations</p>
                                   <p><span class="numbers">2.</span>	Light weight installation distribution</p>
@@ -802,20 +802,10 @@
                                   </tr>
                                   <tr>
                                       <td class="bot" width="25%">Windows 10 / Windows Server 2016 and above</td>
-
+                                       <td class="bot" width="25%"> Windows Server 2016 Data Center / Windows Server 2016 Data center Core and above</td>
+                                       <td class="bot" width="25%">Windows 10 Pro Ver 1809, 1803 / Windows Server 2016 Data Center and above</td>
+                                       <td class="bot" width="25%">Microsoft Windows Server 2016 Base and above</td>
                                   </tr>
-                                   <tr>
-                                     <td class="bot" width="25%"> Windows Server 2016 Data Center / Windows Server 2016 Data center Core and above</td>
-
-                                   </tr>
-                                   <tr>
-                                     <td class="bot" width="25%">Windows 10 Pro Ver 1809, 1803 / Windows Server 2016 Data Center and above</td>
-
-                                   </tr>
-                                   <tr>
-                                     <td class="bot" width="25%">Microsoft Windows Server 2016 Base and above</td>
-
-                                   </tr>
                                </table>
                             </div>
                            </div>
