css changes in doc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -750,15 +750,15 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="BestPractices" class="heading"><span class="numbers">6.</span> Best Practices & Guidelines </a>
+                                <a href="#BestPractices" class="heading"><span class="numbers">6.</span> Best Practices & Guidelines </a>
                             </li>
                              <li>
                                 <a href="Architecture" class="heading"><span class="numbers">7.</span> Architecture & Deployment Models </a>
                                 <ul class="collapse list-unstyled collapse-5">
                                    <li><a class="child 5" href="#SaaSModel"><span class="numbers">7.1</span>SaaS Model</a></li>
-                                   <li><a class="child 5" href="#hybrid"><span class="numbers">7.2</span>Hybrid Model</a></li>
+                                   <li><a class="child 5" href="#HybridModel"><span class="numbers">7.2</span>Hybrid Model</a></li>
                                    <li><a class="child 5" href="#OnPremise"><span class="numbers">7.3</span>On-Premise Model</a></li>
-                                   <li><a class="child 5" href=><span class="numbers">7.</span>On-prem Model</a></li>
+                                   <li><a class="child 5" href="DeploymentArchitecture"><span class="numbers">7.</span>Deployment Architecture</a></li>
                                    <li><a class="child 5" href="#SecurityArchitecture"><span class="numbers">7.4</span>Security Architecture</a></li>
                                </ul>
                             </li>
@@ -2290,7 +2290,7 @@
 
 
                           <div id="BestPractices"  class="page-section">
-                            <h3><span class="numbers">6.</span> Best Practices & Guidelines</h3>
+                            <h3><span class="numbers">6.</span>Best Practices & Guidelines</h3>
                             <h4 class="skyBlue">Workflow Design</h4>
                             <p>Techforce by default offers a diagram for integrating activities into a working structure when developing a workflow file:</p>
                             <h5>Stage</h5>
