--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -737,11 +737,11 @@
                                 <ul class="collapse list-unstyled collapse-4">
                                     <li><a class="child  4" href="#loadBalance"><span class="numbers">5.1</span>RunTime Installation Steps</a>
                                          <ul>
-                                           <li><a class="child  4" href="#SoftwareRequirements"><span class="numbers">5.1.1</span>Software Requirements</a>
-                                           <li><a class="child  4" href="#HardwareRequirements"><span class="numbers">5.1.2</span>Hardware Requirements</a>
-                                             <li><a class="child  4" href="#InstallationInstructions"><span class="numbers">5.1.3</span>Installation Instructions</a>
-                                            <li><a class="child  4" href="#InstallingTechforceOCR"><span class="numbers">5.1.4</span>Installing TechforceOCR</a>
-                                              <li><a class="child  4" href="#Uninstall Instructions"><span class="numbers">5.1.5</span>Uninstall Instructions</a>
+                                           <li><a class="child  4" href="#Software"><span class="numbers">5.1.1</span>Software Requirements</a>
+                                           <li><a class="child  4" href="#Hardware"><span class="numbers">5.1.2</span>Hardware Requirements</a>
+                                             <li><a class="child  4" href="#Instructions"><span class="numbers">5.1.3</span>Installation Instructions</a>
+                                            <li><a class="child  4" href="#TechforceOCR"><span class="numbers">5.1.4</span>Installing TechforceOCR</a>
+                                              <li><a class="child  4" href="#Uninstall"><span class="numbers">5.1.5</span>Uninstall Instructions</a>
                                          </ul>
                                     </li>
                                     <li><a class="child  4" href="#Registeringworker"><span class="numbers">5.2</span>Registering worker with EM console</a></li>
@@ -2190,7 +2190,7 @@
 
                          </div>
 
-                         <div id="SoftwareRequirements"  class="page-section">
+                         <div id="Software"  class="page-section">
                            <h4 class="skyBlue"><span class="numbers">5.1.1</span> Software Requirements</h4>
                            <h5>Worker</h5>
                            <h4>OS Compatibility:</h4>
@@ -2228,17 +2228,17 @@
                            </ol>
                          </div>
 
-                         <div id="InstallationInstructions"  class="page-section">
+                         <div id="Instructions"  class="page-section">
                              <h4 class="purple"><span class="numbers">5.1.3</span>Installation Instructions</h4>
                              <p>Refer 3.1.3</p>
                          </div>
 
-                         <div id="InstallingTechforceOCR"  class="page-section">
+                         <div id="TechforceOCR"  class="page-section">
                              <h4 class="purple"><span class="numbers">5.1.4</span>Installing Techforce OCR</h4>
                              <p>Refer 3.1.4</p>
                          </div>
 
-                         <div id="UninstallInstructions"  class="page-section">
+                         <div id="Uninstall"  class="page-section">
                              <h4 class="purple"><span class="numbers">5.1.5</span>Un-install Instructions</h4>
                              <p>Refer 3.1.5</p>
                          </div>
