--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -939,7 +939,7 @@
                           <div id="New"  class="page-section">
                             <h4 class="purple">3.3.1 New</h4>
                             <p>Used to create a new RPA scripting File (BOT) into the respected folder. The user can start a new project from predefined templates.</p>
-                            <img src="{{ '/assets/images/doc-img1.png' | relative_url }}" alt="image" style="width:100px;">
+                            <img src="{{ '/assets/images/doc-img1.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 5: </span> Techforce.ai RPA Studio New</li>
                           </div>
                           <div id="Open"  class="page-section">
