--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1013,7 +1013,7 @@
                             <li>Programming</li>
                             <li>Mail Integration</li>
                             <li>Database</li>
-                            <img src="{{ '/assets/images/doc-img31.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img31.png' | relative_url }}" alt="image" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 17: </span> Techforce RPA Studio Action Library</li>
 
                             <li>Stage Category</li>
@@ -1023,29 +1023,29 @@
 
                             <li> Desktop Automation</li>
                             <p>Desktop Automation is used to automate the desktop applications like Notepad, Excel, MS- Word, folders, files, images and screen functionalities using sub-actions like keyboard shortcuts, Drag and Drop, Open App, Close APP, Close File and Switch App.</p>
-                            <img src="{{ '/assets/images/doc-img33.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img33.png' | relative_url }}" alt="image" style="width:200px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 19: </span> Techforce RPA Studio Desktop Automation</li>
 
                             <li>3.4.2 Web Automation</li>
                             <p>Web Automation is used to automate the browser applications like Chrome, Firefox and Internet Explorer, etc., using the Sub-Actions like Open Webpage, Read Table, Frame, Popup, Show, Snap, Dom, Scroll and Back.</p>
-                            <img src="{{ '/assets/images/doc-img34.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img34.png' | relative_url }}" alt="image" style="width:200px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 20: </span> Techforce RPA Studio Web Automation</li>
 
                             <h4 class="purple">3.4.2 General</h4>
                             <p>General Action is used to automate normal desktop-based and web-based operations using Sub-Actions</p>
                             <p>The Sub-Actions like Mouse Clicks, Conditions, Excel, Loops, Jump Statements, OCR, Exceptional Handling, Files and Folders, Secure FTP, CSV, Stop, Message Box, Clipboard, Assign, Ask, HTTP API, Wait, Read, Get Credentials, Get Secret, Echo, Enter Keystrokes, Read and Module are used in General Action.</p>
-                            <img src="{{ '/assets/images/doc-img35.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
-                            <img src="{{ '/assets/images/doc-img36.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img35.png' | relative_url }}" alt="image" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img36.png' | relative_url }}" alt="image" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 21: </span> Techforce RPA Studio General</li>
 
                             <h4 class="purple">3.4.2 Programming</h4>
                             <p>Programming Action is containing String and Technology Sub-Actions. Using String Sub-Action, the user can perform string operations and match case operations. By using Programming Sub-Action, the user can include the programming languages like JavaScript, Python, R and Auto Hotkey scripting, available to automate.</p>
-                            <img src="{{ '/assets/images/doc-img37.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img37.png' | relative_url }}" alt="image" style=" width:200px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 23: </span> Techforce RPA Studio File Tab</li>
 
                             <h4 class="purple">3.4.2 Mail Integration</h4>
                             <p>Mail Integration is used to automate mail operations to configure Read Mail, Send Mail and Save Attachments using Sub-Actions: IMAP, POP3, OutLook2016 and Save Attachments.</p>
-                            <img src="{{ '/assets/images/doc-img38.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img38.png' | relative_url }}" alt="image" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                             <li><span class="numbers">Figure 24: </span> Techforce RPA Studio Mail Integration</li>
 
                             <h4 class="purple">3.4.2 Database</h4>
